<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!--操作按钮组-->
    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cookie"
            app:srcCompat="@drawable/push" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/handoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/handoff"
            app:srcCompat="@drawable/handoff" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/open"
            app:srcCompat="@drawable/back_end" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/config"
            app:srcCompat="@drawable/config" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/expand"
        app:srcCompat="@drawable/menu"
        tools:ignore="MissingClass" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>